--- a/edit.html
+++ b/edit.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 
 <html>
-    <head></head>
+    <head>
+        <link href="/styles/styles.css" rel="stylesheet">
+    </head>
     <body>
-        <a href="/index.html">Home</a>
+        <div class="header">
+            <div class="container">
+                <h1 class="header__title">Notes App</h1>
+                <h2 class="header__subtitle">Take notes and never forget</h2>
+            </div>
+        </div>
+
+        <div class="actions">
+            <div class="actions__container actions__container--spaced">
+                <a href="/index.html">Home</a>
+                <span id="last-edited"></span>
+            </div>
+
+        </div>
         <input id="note-tittle" placeholder="Note Tittle">
         <textarea id="note-body" placeholder="Enter note text"></textarea>
-        <span id="last-edited"></span>
         <button id="remove-note">Remove Note</button>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
