--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Notes app</title>
+        <link href="/images/favicon.png" rel="icon">
         <link href="/styles/styles.css" rel="stylesheet">
     </head>
     <body>
@@ -23,9 +25,11 @@
             </div>
         </div>
 
-        <div id='notes'></div>
-        <button id='create-note-button'>Create Note</button>
-        
+        <div class="container">
+            <div id='notes'></div>
+            <button id='create-note-button' class="button">Create Note</button>
+        </div>
+
         <script src="/scripts/uuidv4.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
         <script src="/scripts/notes-functions.js"></script>
