--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,5 @@
             <button id='create-note-button' class="button">Create Note</button>
         </div>
 
-        <script src="/scripts/uuidv4.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-        <script src="/scripts/notes-functions.js"></script>
-        <script src="/scripts/notes-app.js"></script>
-    </body>
+        <script src="/scripts/index-bundle.js"></script>
 </html>
